--- a/AimsProject/src/hust/soict/dsai/aims/screen/cart.fxml
+++ b/AimsProject/src/hust/soict/dsai/aims/screen/cart.fxml
@@ -1,8 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1">
 
+    <top>
+        <VBox spacing="5">
+            <MenuBar>
+                <Menu text="File">
+                    <MenuItem text="Open"/>
+                    <MenuItem text="Save"/>
+                    <MenuItem text="Exit"/>
+                </Menu>
+                <Menu text="Help">
+                    <MenuItem text="About"/>
+                </Menu>
+            </MenuBar>
+            <Label text="CART" style="-fx-font-size: 50; -fx-text-fill: #00ffff;" BorderPane.margin="10"/>
+        </VBox>
+    </top>
+
+    <center>
+        <VBox spacing="10" padding="10">
+            <TableView fx:id="tblMedia">
+                <columns>
+                    <TableColumn text="Title" fx:id="colMediaTitle"/>
+                    <TableColumn text="Category" fx:id="colMediaCategory"/>
+                    <TableColumn text="Cost" fx:id="colMediaCost"/>
+                </columns>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                </columnResizePolicy>
+            </TableView>
+            <Label fx:id="totalLabel" text="Total: 0 $" style="-fx-font-size: 18;" alignment="CENTER_RIGHT"/>
+            <ButtonBar>
+                <Button text="Play" fx:id="btnPlay"/>
+                <Button text="Remove" fx:id="btnRemove"/>
+                <Button text="Place Order" style="-fx-font-size: 18; -fx-background-color: red; -fx-text-fill: white;" fx:id="btnPlaceOrder"/>
+            </ButtonBar>
+        </VBox>
+    </center>
+</BorderPane>
